added table and functions of chat and message
